# buildclaw

./: .gitignore  README.md  README.zh-CN.md
backend/: .env.example  Dockerfile  config.example.yaml  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py  runtime_checks.py
backend/app/core/: event_bus.py  plugins.py  process.py  workflow.py
backend/app/plugins/: __init__.py  command_deploy.py  git_pull.py
backend/app/services/: __init__.py  deployments.py  repositories.py
backend/deploy/nginx/: buildclaw.conf
backend/deploy/systemd/: buildclaw.service
backend/scripts/: doctor.py  install.ps1  install.sh
