[project]
name = "buildclaw-backend"
version = "0.1.0"
description = "Webhook-driven auto deploy backend for BuildClaw"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "PyYAML>=6.0.1,<7.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
